--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
   <h1 class="inicio-h1">Inicio</h1>
     <img src="cazafantasmas.jpg" alt="logo de los cazafantasmas" id="cazafantasmas">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem inventore iusto quo eveniet impedit ab officia, obcaecati soluta voluptatum placeat vero numquam ratione quis, quasi repellendus distinctio aliquid repudiandae Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sapiente placeat, ipsum vel officiis cupiditate corrupti, in debitis ut aut doloribus alias</p>
-     <br>
+     <br> 
      <br>
 <div class="contenedor">     
   <div class="reloj">
     <img src="reloj minimalista.jpg" alt="reloj negro" class="reloj1">
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati suscipit quos assumenda placeat dolore harum, minus earum quaerat porro atque quibusdam omnis mollitia cum! Soluta ipsam pariatur repellat sunt consectetur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae autem unde amet ratione tempora aliquam quia consectetur, recusandae voluptas, porro voluptates facere mollitia perspiciatis fugit deleniti dolor necessitatibus expedita incidunt</p>
+      <p>hola mi nombre es el pepe Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque quia repellendus quisquam ipsum hic enim corrupti unde, suscipit cumque dolor rem velit fugiat odio temporibus magni a quos quis explicabo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos quidem labore sapiente nemo consequatur, repudiandae suscipit consectetur ipsum sed expedita praesentium, obcaecati quae provident unde. Maiores dolorum molestiae reiciendis nemo!</p>
   </div>
      <br>
   <div class="candado"> 
     <img src="candado minimalista.webp" alt="reloj negro" class="candado2">
-      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corporis laudantium iure asperiores dignissimos accusantium tempora ratione adipisci neque? Odit laboriosam ut assumenda voluptates ipsam quidem vero nesciunt velit cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quam rerum ipsa ea blanditiis harum fuga! Nostrum dicta veritatis ratione. Impedit accusantium dolorem earum! Veritatis voluptatem sit dolorem natus eum.</p>
+      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corporis laudantium iure asperiores dignissimos accusantium tempora ratione adipisci neque? Odit laboriosam ut assumenda voluptates ipsam quidem vero nesciunt velit cumque Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quam rerum ipsa ea blanditiis harum fuga! Nostrum dicta veritatis ratione. Impedit accusantium dolorem earum! Veritatis voluptatem sit dolorem natus eum.</p>
   </div>
      <br>
   <div class="corona">
@@ -37,4 +37,9 @@
   </div> 
 </div>  
 </body>
+<footer>
+  EL picture-in-picture
+  sdasd
+  as
+</footer>
 </html>
