--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <title>Misterio a la orden</title>
 </head>
 <body>
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Conocenos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Contactanos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Casos-Resueltos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Homenaje</a>
+    </li>
+  </ul>
     <a href="index.html">Inicio</a> 
     <a href="Conocenos.html">Conocenos</a>
     <a href="Contactanos.html">Contactanos</a>
