agregue navbar a inicio

--- a/Casos-Resueltos.html
+++ b/Casos-Resueltos.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <title>Misterio a la orden</title>
 </head>
 <body>
-    <a href="index.html">Inicio</a>
-    <a href="Conocenos.html">Conocenos</a>
-    <a href="Contactanos.html">Contactanos</a>
-    <a href="Casos-Resueltos.html">Casos Resueltos</a>
-    <a href="Agradecimientos.html">Homenaje</a>
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="index.html">Activo</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Conocenos.html">Enlace de navegación mucho más largo</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Conocenos.html">Enlace</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Casos-Resueltos.html">Deshabilitado</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Agradecimientos.html">Deshabilitado</a>
+    </li>
+  </ul>
   <h1>Casos Resueltos</h1>
     <br>
     <img src="casa-embrujada 1.webp" alt="casa tenebrosa" class="casa-1">
@@ -32,5 +45,7 @@
     <br>
     <img src="casa-embrujada 6.avif" alt="casa aterradora" class="casa-6">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim voluptates reiciendis ipsam officia magni soluta dolores dolorum deserunt culpa, incidunt perspiciatis facere nostrum quas aspernatur dolorem consequuntur eaque ducimus praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, assumenda molestiae. Exercitationem illum reprehenderit inventore, recusandae eius explicabo provident aperiam, quo, laboriosam voluptatum omnis nesciunt minima est numquam ab beatae. Lorem ipsum, dolor sit</p>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
+      </script>
 </body>
 </html>
