--- a/index.html
+++ b/index.html
@@ -9,30 +9,20 @@
     <title>Misterio a la orden</title>
 </head>
 <body>
-  <ul class="nav justify-content-center">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Conocenos</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Contactanos</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled">Casos-Resueltos</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled">Homenaje</a>
-    </li>
-  </ul>
-    <a href="index.html">Inicio</a> 
-    <a href="Conocenos.html">Conocenos</a>
-    <a href="Contactanos.html">Contactanos</a>
-    <a href="Casos-Resueltos.html">Casos Resueltos</a>
-    <a href="Agradecimientos.html">Homenaje</a>
-    <br>
-    <br>
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-4">
+      <h5 class="text-white h4">Contenido que colapsa</h5>
+      <span class="text-muted">Conmutable a través de navbar brand.</span>
+    </div>
+  </div>
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </nav>
+
   <h1 class="inicio-h1">Inicio</h1>
     <img src="cazafantasmas.jpg" alt="logo de los cazafantasmas" id="cazafantasmas">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem inventore iusto quo eveniet impedit ab officia, obcaecati soluta voluptatum placeat vero numquam ratione quis, quasi repellendus distinctio aliquid repudiandae Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sapiente placeat, ipsum vel officiis cupiditate corrupti, in debitis ut aut doloribus alias</p>
@@ -42,7 +32,7 @@
   <div class="reloj">
     <img src="reloj minimalista.jpg" alt="reloj negro" class="reloj1">
       <p>hola mi nombre es el pepe Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque quia repellendus quisquam ipsum hic enim corrupti unde, suscipit cumque dolor rem velit fugiat odio temporibus magni a quos quis explicabo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos quidem labore sapiente nemo consequatur, repudiandae suscipit consectetur ipsum sed expedita praesentium, obcaecati quae provident unde. Maiores dolorum molestiae reiciendis nemo!</p>
-  </div>
+   </div>
      <br>
   <div class="candado"> 
     <img src="candado minimalista.webp" alt="reloj negro" class="candado2">
