--- a/Agradecimientos.html
+++ b/Agradecimientos.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <title>Misterio a la orden</title>
 </head>
 <body>
-    <a href="index.html">Inicio</a>
-    <a href="Conocenos.html">Conocenos</a>
-    <a href="Contactanos.html">Contactanos</a>
-    <a href="Casos-Resueltos.html">Casos Resueltos</a>
-    <a href="Agradecimientos.html">Homenaje</a>
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="index.html">Activo</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Conocenos.html">Enlace de navegación mucho más largo</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Contactanos.html">Enlace</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Casos-Resueltos.html">Deshabilitado</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Agradecimientos.html">Deshabilitado</a>
+    </li>
+  </ul>
+    
   <br>
   <h1>Homenaje</h1>
   <br>
@@ -21,6 +35,10 @@
   <br>
   <br>
   <h2>Y aca dejamos una lista de reproduccion para escuchar mientras cazas fantasmas</h2>
-  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5HV9nHrB6xWRlfsM6typJe?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5HV9nHrB6xWRlfsM6typJe?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+</iframe>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
+</script>
 </body>
 </html>
