--- a/Conocenos.html
+++ b/Conocenos.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <title>Misterio a la orden</title>
 </head>
 <body>
-    <a href="index.html">Inicio</a>
-    <a href="Conocenos.html">Conocenos</a>
-    <a href="Contactanos.html">Contactanos</a>
-    <a href="Casos-Resueltos.html">Casos Resueltos</a>
-    <a href="Agradecimientos.html">Homenaje</a>
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="index.html">Activo</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Conocenos.html">Enlace de navegación mucho más largo</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Conocenos.html">Enlace</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Casos-Resueltos.html">Deshabilitado</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Agradecimientos.html">Deshabilitado</a>
+    </li>
+  </ul>
     <h1>Conocenos</h1>
     <br>
     <img src="Fred scooby doo.webp" alt="fred de Scooby doo" class="fred">
@@ -29,5 +42,7 @@
     <br>
     <img src="ScoobyDoo prro.jpg" alt="Scooby doo" class="scooby">
       <p class="parrafo-scooby">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium repellat architecto in dolore culpa itaque quas? Esse, soluta dolorum! Ipsa itaque molestias ipsum ullam, laudantium assumenda qui voluptas iure hic. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque deserunt fugiat laborum eligendi quasi, odio quibusdam nemo doloribus unde quo, accusamus facilis voluptatibus dolores porro tenetur sunt. Dolorem, ipsa doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab modi eveniet ratione, blanditiis maiores et vero. Molestias perspiciatis dignissimos tempora hic ipsam omnis corrupti unde voluptate enim laudantium. Sunt, quas!</p> 
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
+      </script>
 </body>
 </html>
