--- a/Agradecimientos.html
+++ b/Agradecimientos.html
@@ -9,24 +9,37 @@
     <title>Misterio a la orden</title>
 </head>
 <body>
-  <ul class="nav nav-pills nav-fill">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="index.html">Activo</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="Conocenos.html">Enlace de navegación mucho más largo</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="Contactanos.html">Enlace</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="Casos-Resueltos.html">Deshabilitado</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="Agradecimientos.html">Deshabilitado</a>
-    </li>
-  </ul>
-    
+  <nav class="navbar navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Misterio a la orden</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu de Inicio</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Conocenos.html">Conocenos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Contactanos.html">Contactanos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Casos-Resueltos.html">Casos Resueltos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="Agradecimientos.html">Agradecimientos</a>
+            </li> 
+  </nav>
+  <br>
+  <br>
   <br>
   <h1>Homenaje</h1>
   <br>
