--- a/Contactanos.html
+++ b/Contactanos.html
@@ -9,30 +9,45 @@
     <title>Misterio a la orden</title>
 </head>
 <body>
-    <ul class="nav nav-pills nav-fill">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Activo</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Conocenos.html">Enlace de navegación mucho más largo</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Conocenos.html">Enlace</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Casos-Resueltos.html">Deshabilitado</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Agradecimientos.html">Deshabilitado</a>
-        </li>
-      </ul>
-    <h1>Contactanos</h1>
-<form>
+  <nav class="navbar navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Misterio a la orden</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Conocenos.html">Conocenos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="Contactanos.html">Contactanos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Casos-Resueltos.html">Casos Resueltos</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link" href="Agradecimientos.html">Agradecimientos</a>
+            </li>
+          </nav>
+<br>
+<br>
+<br>
+<form class="formularios">
     <input type="text" placeholder="Gmail">
     <input type="text" placeholder="Direccion">
     <input type="number" placeholder="N. de Telefono">
     <button type="submit">Enviar</button>
 </form>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
 </script>
 
