--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="style.css" rel="stylesheet">
     <title>Misterio a la orden</title>
 </head>
-<body>
+<body class="fondo1">
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand">Misterio a la orden</a>
+      <a class="navbar-brand"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,33 +41,33 @@
   <br>
   <br>
   <br>
-  <h1 class="inicio-h1">Inicio</h1>
-    <img src="cazafantasmas.jpg" alt="logo de los cazafantasmas" id="cazafantasmas">
+  <img src="background-image.jpg" class="img-fluid" alt="...">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem inventore iusto quo eveniet impedit ab officia, obcaecati soluta voluptatum placeat vero numquam ratione quis, quasi repellendus distinctio aliquid repudiandae Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sapiente placeat, ipsum vel officiis cupiditate corrupti, in debitis ut aut doloribus alias</p>
      <br> 
      <br>
 <div class="contenedor">     
   <div class="reloj">
     <img src="reloj minimalista.jpg" alt="reloj negro" class="reloj1">
-      <p>hola mi nombre es el pepe Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque quia repellendus quisquam ipsum hic enim corrupti unde, suscipit cumque dolor rem velit fugiat odio temporibus magni a quos quis explicabo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos quidem labore sapiente nemo consequatur, repudiandae suscipit consectetur ipsum sed expedita praesentium, obcaecati quae provident unde. Maiores dolorum molestiae reiciendis nemo!</p>
+      <p>
+        <h1>Coordinación</h1>
+        Nos adaptamos a tus tiempos y para cuando lo necesites. Sabemos que es algo que querés solucionar rápido, y rápido vamos a estar.</p>
    </div>
      <br>
   <div class="candado"> 
     <img src="candado minimalista.webp" alt="reloj negro" class="candado2">
-      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corporis laudantium iure asperiores dignissimos accusantium tempora ratione adipisci neque? Odit laboriosam ut assumenda voluptates ipsam quidem vero nesciunt velit cumque Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quam rerum ipsa ea blanditiis harum fuga! Nostrum dicta veritatis ratione. Impedit accusantium dolorem earum! Veritatis voluptatem sit dolorem natus eum.</p>
+      <p> <h1>Te protegemos</h1>
+        Usamos productos que no son tóxicos. Los operarios están asegurados, certificados y te brindamos todos los datos necesarios para tu tranquilidad.</p>
   </div>
      <br>
   <div class="corona">
     <img src="corona minimalusta.png" alt="corona negra" class="corona3">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta minima iste reiciendis earum dolorem. Debitis similique magnam repudiandae nemo ea quisquam voluptatibus culpa suscipit maiores dolores, optio obcaecati modi error. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus, dolorem! Quos asperiores dolorem ducimus animi autem incidunt tempore aliquid dolor enim iusto at praesentium optio, ex earum amet nobis modi.</p>
+      <p><h1>Garantizamos calidad</h1>
+        Trabajamos con productos de los mejores laboratorios, director técnico e ingeniero agrónomo. También estamos habilitados a emitir certificados para toda la provincia.</p>
   </div> 
 </div>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
  </script>  
 </body>
 <footer>
-  EL picture-in-picture
-  sdasd
-  as
 </footer>
 </html>
