Termine por ahora

--- a/Agradecimientos.html
+++ b/Agradecimientos.html
@@ -8,10 +8,10 @@
     <link href="style.css" rel="stylesheet">
     <title>Misterio a la orden</title>
 </head>
-<body>
+<body class="fondo5">
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Misterio a la orden</a>
+      <a class="navbar-brand" href="#">Misterio a la orden - Agradecimientos</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,10 +41,12 @@
   <br>
   <br>
   <br>
-  <h1>Homenaje</h1>
   <br>
-  <h2>Aca dejamos una recopilacion de nuestras mejores trampas para cazar fantasmas</h2>
+
+  <h2 class="titulo23">Aca dejamos una recopilacion de nuestras mejores trampas para cazar fantasmas</h2>
+<div class="video">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/xZV_2-7OBRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
   <br>
   <br>
   <h2>Y aca dejamos una lista de reproduccion para escuchar mientras cazas fantasmas</h2>
