--- a/Casos-Resueltos.html
+++ b/Casos-Resueltos.html
@@ -8,10 +8,10 @@
     <link href="style.css" rel="stylesheet">
     <title>Misterio a la orden</title>
 </head>
-<body>
+<body class="fondo3">
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Misterio a la orden</a>
+      <a class="navbar-brand" href="#">Misterio a la orden - Casos Resueltos</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,26 +41,57 @@
   <br>
   <br>
   <br>
-  <h1>Casos Resueltos</h1>
+  <br>
+<div class="casas1-3">
+    <div class="card" style="width: 18rem;">
+      <img src="casa-embrujada 1.webp" class="card-img-top" alt="...">
+      <div class="card-body"> 
+        <p class="card-text">Nos enfrentamos a un reto escalofriante en una casa embrujada. Atravesamos sus pasillos llenos de sombras y enfrentamos a espíritus inquietos.</p>
+      </div>
+    </div>
     <br>
-    <img src="casa-embrujada 1.webp" alt="casa tenebrosa" class="casa-1">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim voluptates reiciendis ipsam officia magni soluta dolores dolorum deserunt culpa, incidunt perspiciatis facere nostrum quas aspernatur dolorem consequuntur eaque ducimus praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, assumenda molestiae. Exercitationem illum reprehenderit inventore, recusandae eius explicabo provident aperiam, quo, laboriosam voluptatum omnis nesciunt minima est numquam ab beatae. Lorem ipsum, dolor sit</p>
+    <div class="card" style="width: 18rem;">
+      <img src="casa-embrujada 2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">
+          Nos adentramos valientemente en la aterradora mansión encantada, desvelando enigmas y liberando a los espectros perturbados.</p>
+      </div>
+    </div>
     <br>
-    <img src="casa-embrujada 2.jpg" alt="casa escalofriante" class="casa-2">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam tempora ut consequuntur reiciendis. Nulla, velit natus veniam corrupti, officiis quibusdam, maiores molestiae maxime harum facere laboriosam aperiam nobis in. Tempora! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, voluptas laudantium blanditiis voluptatum id voluptate exercitationem? Cupiditate distinctio facere placeat atque quod assumenda? Doloribus veniam quo ratione fuga a ea.</p>
+    <div class="card" style="width: 18rem;">
+      <img src="casa-embrujada 3.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Desafiando nuestros miedos, exploramos la siniestra mansión, desvelando secretos ocultos y confrontando a las sombras misteriosas.</p>
+      </div>
+    </div>
+</div>
     <br>
-    <img src="casa-embrujada 3.jpg" alt="casa de 2 pisos sombria" class="casa-3">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit omnis maxime tempora neque quaerat explicabo perferendis dignissimos veniam sit blanditiis consectetur voluptates, consequuntur amet ea ipsum nam adipisci ducimus cumque? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere aliquam molestiae illo, hic consequatur vitae recusandae ipsum accusantium. Rerum aut est expedita incidunt asperiores ad, iure dolore dicta atque soluta.</p>
+<div class="casas4-6">
+    <div class="card" style="width: 18rem;">
+      <img src="casa-embrujada 4.webp" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Nos aventuramos en la casa embrujada, enfrentando sus terrores y desentrañando sus enigmas. </p>
+      </div>
+    </div>
     <br>
-    <img src="casa-embrujada 4.webp" alt="casa abandonada" class="casa-4">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim voluptates reiciendis ipsam officia magni soluta dolores dolorum deserunt culpa, incidunt perspiciatis facere nostrum quas aspernatur dolorem consequuntur eaque ducimus praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, assumenda molestiae. Exercitationem illum reprehenderit inventore, recusandae eius explicabo provident aperiam, quo, laboriosam voluptatum omnis nesciunt minima est numquam ab beatae. Lorem ipsum, dolor sit</p>
+    <div class="card" style="width: 18rem;">
+      <img src="casa-embrujada 5.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Nos sumergimos en la oscuridad de la mansión embrujada, enfrentando sus misterios y desafiando nuestros propios temores.</p>
+      </div>
+    </div>
     <br>
-    <img src="casa-embrujada 5.jpg" alt="castillo tenebroso" class="casa-5">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim voluptates reiciendis ipsam officia magni soluta dolores dolorum deserunt culpa, incidunt perspiciatis facere nostrum quas aspernatur dolorem consequuntur eaque ducimus praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, assumenda molestiae. Exercitationem illum reprehenderit inventore, recusandae eius explicabo provident aperiam, quo, laboriosam voluptatum omnis nesciunt minima est numquam ab beatae. Lorem ipsum, dolor sit</p>
-    <br>
-    <img src="casa-embrujada 6.avif" alt="casa aterradora" class="casa-6">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim voluptates reiciendis ipsam officia magni soluta dolores dolorum deserunt culpa, incidunt perspiciatis facere nostrum quas aspernatur dolorem consequuntur eaque ducimus praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, assumenda molestiae. Exercitationem illum reprehenderit inventore, recusandae eius explicabo provident aperiam, quo, laboriosam voluptatum omnis nesciunt minima est numquam ab beatae. Lorem ipsum, dolor sit</p>
+    <div class="card" style="width: 18rem;">
+      <img src="casa-embrujada 6.avif" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Intrépidos ante la morada del terror, desenmascaramos la siniestra trama de la casa encantada. Desterramos las sombras y restauramos la paz en este lugar embrujado.</p>
+      </div>
+    </div>
+</div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
       </script>
 </body>
+<footer>
+  asds
+</footer>
 </html>
