--- a/Conocenos.html
+++ b/Conocenos.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Misterio a la orden</title>
 </head>
-<body>
+<body class="fondo2">
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Misterio a la orden</a>
+      <a class="navbar-brand" href="#">Misterio a la orden - Conocenos</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+          <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu de Inicio</h5>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
@@ -39,26 +40,101 @@
             </li>
           </ul>
   </nav>
-  <br>
-  <br>
-  <br>
+<br>
+<br>
+<br>
+<div class="links">
+<a href="#Fred">Fred</a>
+<a href="#Daphne">Daphne</a>
+<a href="#Velma">Velma</a>
+<a href="#Shaggy">Shaggy</a>
+<a href="#Scooby">ScoobyDoo</a>
+</div>
+<div class="divsupremo">
+  <div class="container1">
+    <div class="card-container1">
+        <div class="header1">
+            <a href="#">
+                <img id="Daphne" src="Daphne scooby doo.jpg" alt="" width="250px" height="200px">   
+            </a>
+            <h2>Daphen Blake</h2>
+            <h4>la investigadora</h4>
+        </div>
+            <div class="descripcion1">
+            <p>Mis habilidades para la observación y la investigación de campo me han ayudado en muchas de las aventuras del equipo.</p>
+            </div>
+    </div>
+  </div>
+<br>
 
-    <h1>Conocenos</h1>
-    <br>
-    <img src="Fred scooby doo.webp" alt="fred de Scooby doo" class="fred">
-      <p class="parrafo-fred">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos hic veritatis, quidem mollitia quod sunt maiores natus pariatur unde harum nobis, vero at? Suscipit, quidem saepe? A, ut. Quibusdam, doloribus!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate laborum quod molestiae incidunt, velit quidem recusandae, consequuntur quasi natus, impedit temporibus saepe ex eos aliquam at! Dolorem reprehenderit recusandae molestias?</p>
-    <br>
-    <img src="Daphne scooby doo.jpg" alt="Dapnhe de Scooby doo" class="daphne">
-      <p class="parrafo-daphne">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum magnam nam nesciunt nobis corrupti aut dignissimos illo, et quidem facilis! Sequi, eos eum animi ab quaerat aut pariatur enim consequuntur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque possimus tempore autem laboriosam. Vero itaque dolorum eaque vitae ex aliquid eum illum, esse optio nam laboriosam ut! Error, totam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam officiis voluptas neque quasi, numquam nisi nam. Doloribus quod officiis quas repudiandae fugiat nam sit amet doloremque, odio veniam, numquam mollitia.</p>
-    <br>
-    <img src="Velma scooby doo.avif" alt="Velma de Scooby doo" class="velma">
-      <p class="parrafo-velma">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, beatae id enim esse fugit excepturi facere officia ullam optio fugiat debitis! Tempore alias beatae error cupiditate consequatur inventore laudantium cum? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, harum. Ipsa magni commodi, fuga dicta perspiciatis et voluptas. Exercitationem veritatis aperiam quibusdam minus eligendi neque id magni, suscipit rerum dicta. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat doloremque nobis, alias maiores hic maxime voluptatem tenetur officia labore voluptas excepturi aperiam. Vitae eveniet nobis nisi accusantium odit, nostrum adipisci?</p>
-    <br>
-    <img src="shaggy scooby doo.webp" alt="Shaggy de Scooby doo" class="shaggy">
-      <p class="parrafo-shaggy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae alias eius neque enim fuga ab sunt facilis odit delectus temporibus cupiditate reiciendis consequatur accusantium, perferendis labore tenetur similique a hic. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quae fuga provident delectus facere, animi eligendi nisi, ipsa ea iste magni molestias atque. Vero similique iure harum reiciendis, unde fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur minus placeat expedita consequatur, odit veniam. Dolore rerum nisi ut facere iure ratione et. Placeat odit velit excepturi deserunt facere omnis?</p>
-    <br>
-    <img src="ScoobyDoo prro.jpg" alt="Scooby doo" class="scooby">
-      <p class="parrafo-scooby">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium repellat architecto in dolore culpa itaque quas? Esse, soluta dolorum! Ipsa itaque molestias ipsum ullam, laudantium assumenda qui voluptas iure hic. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque deserunt fugiat laborum eligendi quasi, odio quibusdam nemo doloribus unde quo, accusamus facilis voluptatibus dolores porro tenetur sunt. Dolorem, ipsa doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab modi eveniet ratione, blanditiis maiores et vero. Molestias perspiciatis dignissimos tempora hic ipsam omnis corrupti unde voluptate enim laudantium. Sunt, quas!</p> 
+<br>
+    <div class="container2">
+      <div class="card-container2">
+          <div class="header2">
+              <a href="#">
+                  <img src="Fred scooby doo.webp" alt="" width="250px" height="200px">   
+              </a>
+                <h2>Fred Jones</h2>
+                <h4>El valiente</h4>
+          </div>
+            <div id="Fred" class="descripcion2">
+      <p>Trabajo como lider y estratégista, planeando nuestro curso de acción y ayudándolos a superar cualquier obstáculo en su camino</p>
+            </div>
+      </div>
+    </div> 
+<br>
+
+<br>
+  <div class="container3">
+      <div class="card-container3">
+          <div class="header3">
+              <a href="#">
+                  <img id="Velma" src="Velma scooby doo.avif" alt="" width="250px" height="200px">   
+              </a>
+                <h2>Velma Dinkley</h2>
+                <h4>La inteligente</h4>
+          </div>
+               <div class="descripcion3">
+                <p>Tengo una gran capacidad de cálculo deduccion. Mis habilidades para resolver misterios me han servido muchas veces a lo largo de mis aventuras</p>
+               </div>
+      </div>
+  </div> 
+<br>
+
+<br>
+<div class="container4">
+   <div class="card-container4">
+      <div class="header4">
+          <a href="#">
+              <img id="Shaggy" src="shaggy scooby doo.webp" alt="" width="250px" height="200px">   
+          </a>
+            <h2>Shaggy Norvle</h2>
+            <h4>El asustadizo</h4>
+      </div>
+        <div class="descripcion4">
+            <p>Soy conocido por ser algo torpe, asustadizo y con ganas de comer. Pero también soy un gran amigo y compañero, y siempre estoy dispuesto a ayudar cuando hagan falta</p>
+        </div>
+    </div>
+</div>
+<br>
+
+<br>
+  <div class="container5">
+    <div class="card-container5">
+     <div class="header5">
+         <a href="#">
+             <img id="Scooby" src="ScoobyDoo prro.jpg" alt="" width="250px" height="200px">   
+         </a>
+           <h2>Scooby Doo</h2>
+           <h4>El hambriento</h4>
+     </div>
+         <div class="descripcion5">
+           <p class="scooby">¡Soy una fuente constante de entretenimiento y diversión en el equipo! Mi temperamento es alegre y divertido, y me encanta descubrir grandes misterios</p>
+         </div>
+      </div>
+    </div>
+</div>
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
       </script>
 </body>
