--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
+    <style>
+    </style>
     <title>Misterio a la orden</title>
 </head>
 <body class="fondo1">
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand"></a>
+      <a class="navbar-brand">Misterio a la orden - Inicio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,33 +43,35 @@
   <br>
   <br>
   <br>
+  <h1 class="tituloP">Misterio a la Orden</h1>
   <img src="background-image.jpg" class="img-fluid" alt="...">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem inventore iusto quo eveniet impedit ab officia, obcaecati soluta voluptatum placeat vero numquam ratione quis, quasi repellendus distinctio aliquid repudiandae Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sapiente placeat, ipsum vel officiis cupiditate corrupti, in debitis ut aut doloribus alias</p>
+      <p class="texto-inicio">Somos el inigualable equipo de Scooby-Doo y nos complace presentarles nuestro nuevo y emocionante servicio: ¡Los Cazafantasmas de Scooby-Doo! ¿Estás experimentando extraños sucesos paranormales en tu ciudad? ¿Te persiguen espectros, fantasmas y criaturas sobrenaturales? ¡No te preocupes más! Nuestro equipo está aquí para resolver esos misterios espeluznantes y salvar el día.¿Qué nos hace diferentes de otros equipos de cazafantasmas? Nuestra fórmula ganadora radica en nuestra dinámica como grupo. Pero eso no es todo. Nuestro furgón de alta tecnología, la Máquina del Misterio, está equipado con todo lo necesario para investigar y perseguir espíritus malignos. Desde rastreadores de fantasmas hasta trampas especializadas, tenemos todas las herramientas necesarias para resolver los casos más escalofriantes.
+      </p>
      <br> 
      <br>
-<div class="contenedor">     
+ <div class="contenedor">     
   <div class="reloj">
     <img src="reloj minimalista.jpg" alt="reloj negro" class="reloj1">
-      <p>
+      <p class="texto-inicio">
         <h1>Coordinación</h1>
         Nos adaptamos a tus tiempos y para cuando lo necesites. Sabemos que es algo que querés solucionar rápido, y rápido vamos a estar.</p>
    </div>
-     <br>
   <div class="candado"> 
     <img src="candado minimalista.webp" alt="reloj negro" class="candado2">
-      <p> <h1>Te protegemos</h1>
+      <p class="texto-inicio"> <h1>Te protegemos</h1>
         Usamos productos que no son tóxicos. Los operarios están asegurados, certificados y te brindamos todos los datos necesarios para tu tranquilidad.</p>
   </div>
      <br>
   <div class="corona">
     <img src="corona minimalusta.png" alt="corona negra" class="corona3">
-      <p><h1>Garantizamos calidad</h1>
+      <p class="texto-inicio"><h1>Garantizamos calidad</h1>
         Trabajamos con productos de los mejores laboratorios, director técnico e ingeniero agrónomo. También estamos habilitados a emitir certificados para toda la provincia.</p>
   </div> 
-</div>
+ </div>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
  </script>  
 </body>
 <footer>
+  Scooby.inc
 </footer>
 </html>
