arregle un par de cosas

--- a/Casos-Resueltos.html
+++ b/Casos-Resueltos.html
@@ -44,14 +44,14 @@
   <br>
 <div class="casas1-3">
     <div class="card" style="width: 18rem;">
-      <img src="casa-embrujada 1.webp" class="card-img-top" alt="...">
+      <img src="./Imagenes/casa-embrujada 1.webp" class="card-img-top" alt="...">
       <div class="card-body"> 
         <p class="card-text">Nos enfrentamos a un reto escalofriante en una casa embrujada. Atravesamos sus pasillos llenos de sombras y enfrentamos a espíritus inquietos.</p>
       </div>
     </div>
     <br>
     <div class="card" style="width: 18rem;">
-      <img src="casa-embrujada 2.jpg" class="card-img-top" alt="...">
+      <img src="./Imagenes/casa-embrujada 2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">
           Nos adentramos valientemente en la aterradora mansión encantada, desvelando enigmas y liberando a los espectros perturbados.</p>
@@ -59,7 +59,7 @@
     </div>
     <br>
     <div class="card" style="width: 18rem;">
-      <img src="casa-embrujada 3.jpg" class="card-img-top" alt="...">
+      <img src="./Imagenes/casa-embrujada 3.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Desafiando nuestros miedos, exploramos la siniestra mansión, desvelando secretos ocultos y confrontando a las sombras misteriosas.</p>
       </div>
@@ -68,21 +68,21 @@
     <br>
 <div class="casas4-6">
     <div class="card" style="width: 18rem;">
-      <img src="casa-embrujada 4.webp" class="card-img-top" alt="...">
+      <img src="./Imagenes/casa-embrujada 4.webp" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Nos aventuramos en la casa embrujada, enfrentando sus terrores y desentrañando sus enigmas. </p>
       </div>
     </div>
     <br>
     <div class="card" style="width: 18rem;">
-      <img src="casa-embrujada 5.jpg" class="card-img-top" alt="...">
+      <img src="./Imagenes/casa-embrujada 5.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Nos sumergimos en la oscuridad de la mansión embrujada, enfrentando sus misterios y desafiando nuestros propios temores.</p>
       </div>
     </div>
     <br>
     <div class="card" style="width: 18rem;">
-      <img src="casa-embrujada 6.avif" class="card-img-top" alt="...">
+      <img src="./Imagenes/casa-embrujada 6.avif" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Intrépidos ante la morada del terror, desenmascaramos la siniestra trama de la casa encantada. Desterramos las sombras y restauramos la paz en este lugar embrujado.</p>
       </div>
