--- a/Conocenos.html
+++ b/Conocenos.html
@@ -55,7 +55,7 @@
     <div class="card-container1">
         <div class="header1">
             <a href="#">
-                <img id="Daphne" src="Daphne scooby doo.jpg" alt="" width="250px" height="200px">   
+                <img id="Daphne" src="./Imagenes/Daphne scooby doo.jpg" alt="" width="250px" height="200px">   
             </a>
             <h2>Daphen Blake</h2>
             <h4>la investigadora</h4>
@@ -72,7 +72,7 @@
       <div class="card-container2">
           <div class="header2">
               <a href="#">
-                  <img src="Fred scooby doo.webp" alt="" width="250px" height="200px">   
+                  <img src="./Imagenes/Fred scooby doo.webp" alt="" width="250px" height="200px">   
               </a>
                 <h2>Fred Jones</h2>
                 <h4>El valiente</h4>
@@ -89,7 +89,7 @@
       <div class="card-container3">
           <div class="header3">
               <a href="#">
-                  <img id="Velma" src="Velma scooby doo.avif" alt="" width="250px" height="200px">   
+                  <img id="Velma" src="./Imagenes/Velma scooby doo.avif" alt="" width="250px" height="200px">   
               </a>
                 <h2>Velma Dinkley</h2>
                 <h4>La inteligente</h4>
@@ -106,7 +106,7 @@
    <div class="card-container4">
       <div class="header4">
           <a href="#">
-              <img id="Shaggy" src="shaggy scooby doo.webp" alt="" width="250px" height="200px">   
+              <img id="Shaggy" src="./Imagenes/shaggy scooby doo.webp" alt="" width="250px" height="200px">   
           </a>
             <h2>Shaggy Norvle</h2>
             <h4>El asustadizo</h4>
@@ -123,7 +123,7 @@
     <div class="card-container5">
      <div class="header5">
          <a href="#">
-             <img id="Scooby" src="ScoobyDoo prro.jpg" alt="" width="250px" height="200px">   
+             <img id="Scooby" src="./Imagenes/ScoobyDoo prro.jpg" alt="" width="250px" height="200px">   
          </a>
            <h2>Scooby Doo</h2>
            <h4>El hambriento</h4>
