--- a/Contactanos.html
+++ b/Contactanos.html
@@ -46,7 +46,7 @@
 <div class="login">
   <div class="formLogin">
   <form>
-  <h1>Login</h1>
+  <h1>Hablanos</h1>
 
     <div class="inputContainer">
       <label for="nombre"></label>
