--- a/index.html
+++ b/index.html
@@ -44,26 +44,26 @@
   <br>
   <br>
   <h1 class="tituloP">Misterio a la Orden</h1>
-  <img src="background-image.jpg" class="img-fluid" alt="...">
+  <img src="./Imagenes/cazafantasmas.jpg" class="img-fluid" alt="...">
       <p class="texto-inicio">Somos el inigualable equipo de Scooby-Doo y nos complace presentarles nuestro nuevo y emocionante servicio: ¡Los Cazafantasmas de Scooby-Doo! ¿Estás experimentando extraños sucesos paranormales en tu ciudad? ¿Te persiguen espectros, fantasmas y criaturas sobrenaturales? ¡No te preocupes más! Nuestro equipo está aquí para resolver esos misterios espeluznantes y salvar el día.¿Qué nos hace diferentes de otros equipos de cazafantasmas? Nuestra fórmula ganadora radica en nuestra dinámica como grupo. Pero eso no es todo. Nuestro furgón de alta tecnología, la Máquina del Misterio, está equipado con todo lo necesario para investigar y perseguir espíritus malignos. Desde rastreadores de fantasmas hasta trampas especializadas, tenemos todas las herramientas necesarias para resolver los casos más escalofriantes.
       </p>
      <br> 
      <br>
  <div class="contenedor">     
   <div class="reloj">
-    <img src="reloj minimalista.jpg" alt="reloj negro" class="reloj1">
+    <img src="./Imagenes/reloj minimalista.jpg" alt="reloj negro" class="reloj1">
       <p class="texto-inicio">
         <h1>Coordinación</h1>
         Nos adaptamos a tus tiempos y para cuando lo necesites. Sabemos que es algo que querés solucionar rápido, y rápido vamos a estar.</p>
    </div>
   <div class="candado"> 
-    <img src="candado minimalista.webp" alt="reloj negro" class="candado2">
+    <img src="./Imagenes/candado minimalista.webp" alt="reloj negro" class="candado2">
       <p class="texto-inicio"> <h1>Te protegemos</h1>
         Usamos productos que no son tóxicos. Los operarios están asegurados, certificados y te brindamos todos los datos necesarios para tu tranquilidad.</p>
   </div>
      <br>
   <div class="corona">
-    <img src="corona minimalusta.png" alt="corona negra" class="corona3">
+    <img src="./Imagenes/corona minimalusta.png" alt="corona negra" class="corona3">
       <p class="texto-inicio"><h1>Garantizamos calidad</h1>
         Trabajamos con productos de los mejores laboratorios, director técnico e ingeniero agrónomo. También estamos habilitados a emitir certificados para toda la provincia.</p>
   </div> 
