--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
               <a class="nav-link active" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Conocenos.html">Conocenos</a>
+              <a class="nav-link" href="../Proyectofinal/HTML/Conocenos.html">Conocenos</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="Contactanos.html">Contactanos</a>
+              <a class="nav-link" href="../Proyectofinal/HTML/Contactanos.html">Contactanos</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="Casos-Resueltos.html">Casos Resueltos</a>
+              <a class="nav-link" href="../Proyectofinal/HTML/Casos-Resueltos.html">Casos Resueltos</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="Agradecimientos.html">Agradecimientos</a>
+              <a class="nav-link" href="../Proyectofinal/HTML/Agradecimientos.html">Agradecimientos</a>
             </li>           
   </nav>
   <br>
   <br>
   <br>
   <h1 class="tituloP">Misterio a la Orden</h1>
-  <img src="./Imagenes/cazafantasmas.jpg" class="img-fluid" alt="...">
+  <img src="./Imagenes/cazafantasmas.jpg" class="img-fluid" alt="Logo de los cazafantasmas">
       <p class="texto-inicio">Somos el inigualable equipo de Scooby-Doo y nos complace presentarles nuestro nuevo y emocionante servicio: ¡Los Cazafantasmas de Scooby-Doo! ¿Estás experimentando extraños sucesos paranormales en tu ciudad? ¿Te persiguen espectros, fantasmas y criaturas sobrenaturales? ¡No te preocupes más! Nuestro equipo está aquí para resolver esos misterios espeluznantes y salvar el día.¿Qué nos hace diferentes de otros equipos de cazafantasmas? Nuestra fórmula ganadora radica en nuestra dinámica como grupo. Pero eso no es todo. Nuestro furgón de alta tecnología, la Máquina del Misterio, está equipado con todo lo necesario para investigar y perseguir espíritus malignos. Desde rastreadores de fantasmas hasta trampas especializadas, tenemos todas las herramientas necesarias para resolver los casos más escalofriantes.
       </p>
      <br> 
@@ -57,7 +57,7 @@
         Nos adaptamos a tus tiempos y para cuando lo necesites. Sabemos que es algo que querés solucionar rápido, y rápido vamos a estar.</p>
    </div>
   <div class="candado"> 
-    <img src="./Imagenes/candado minimalista.webp" alt="reloj negro" class="candado2">
+    <img src="./Imagenes/candado minimalista.webp" alt="candado negro" class="candado2">
       <p class="texto-inicio"> <h1>Te protegemos</h1>
         Usamos productos que no son tóxicos. Los operarios están asegurados, certificados y te brindamos todos los datos necesarios para tu tranquilidad.</p>
   </div>
