--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, in itial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="./css/styles.css" rel="stylesheet">
     <style>
@@ -44,7 +44,7 @@
   <br>
   <br>
   <h1 class="tituloP">Misterio a la Orden</h1>
-  <img src="./Imagenes/cazafantasmas.jpg" class="img-fluid" alt="Logo de los cazafantasmas">
+  <img src="../Proyectofinal/Imagenes/background-image.jpg" class="img-fluid" alt="Logo de los cazafantasmas">
       <p class="texto-inicio">Somos el inigualable equipo de Scooby-Doo y nos complace presentarles nuestro nuevo y emocionante servicio: ¡Los Cazafantasmas de Scooby-Doo! ¿Estás experimentando extraños sucesos paranormales en tu ciudad? ¿Te persiguen espectros, fantasmas y criaturas sobrenaturales? ¡No te preocupes más! Nuestro equipo está aquí para resolver esos misterios espeluznantes y salvar el día.¿Qué nos hace diferentes de otros equipos de cazafantasmas? Nuestra fórmula ganadora radica en nuestra dinámica como grupo. Pero eso no es todo. Nuestro furgón de alta tecnología, la Máquina del Misterio, está equipado con todo lo necesario para investigar y perseguir espíritus malignos. Desde rastreadores de fantasmas hasta trampas especializadas, tenemos todas las herramientas necesarias para resolver los casos más escalofriantes.
       </p>
      <br> 
